--- a/App/views/index.ejs
+++ b/App/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
     <br><br>
-    <h1 style="text-align:center;">Just a test page, Hello World!</h1>
+    <h1>Hello!</h1>
 </html>
