--- a/App/views/index.ejs
+++ b/App/views/index.ejs
@@ -2,4 +2,6 @@
 <html>
     <br><br>
     <h1>Hello!</h1>
+    <button onclick="window.location.replace('/viewFiles')">View inputted files</button><br>
+    <button onclick="window.location.replace('/inputForm')">Input form</button>
 </html>
