--- a/App/views/index.ejs
+++ b/App/views/index.ejs
@@ -3,5 +3,5 @@
     <br><br>
     <h1>Hello!</h1>
     <button onclick="window.location.replace('/viewFiles')">View inputted files</button><br>
-    <button onclick="window.location.replace('/inputForm')">Input form</button>
+    <button onclick="window.location.replace('/inputFile')">Input form</button>
 </html>
