Inputting of files now functioning properly; files are now named differently based on the date they were inputted; file extensions are now preserved; new events can be created without the need to create a new file; when a user creates a new event from the choose event page, once the event is created, the user is redirected back to the the choose event page where the new event is selected by default; implemented encapsulation of database calls to make code cleaner and lessen code reuse.

--- a/App/views/index.ejs
+++ b/App/views/index.ejs
@@ -9,5 +9,7 @@
     <h1>Hello!</h1>
     
     <button onclick="window.location.replace('/viewFiles')">View inputted files</button><br>
-    <button onclick="window.location.replace('/inputFile')">Input form</button>
+    <button onclick="window.location.replace('/inputFile')">File Input form</button><br>
+    <button onclick="window.location.replace('/newEvent')">Event Input form</button>
+
 </html>
