--- a/App/views/chooseEvent.ejs
+++ b/App/views/chooseEvent.ejs
@@ -2,41 +2,29 @@
 <html>
     <body>
         <h3>Choose Event</h1>
-        <form method="POST" action="/inputFile" id="eventForm">
-            <input type="hidden" name="eventType" id="eventType" value="existing">
+        <form method="POST" action="/chooseEvent" id="eventForm">
 
-            <select name="event" id="event" onchange="newEventMode(this.value)">
-                <!--TODO: populate dropdown menu with event IDs, make JS put form up-->
-                <option value="none">Choose an event</option>
+            <select name="event" id="event" onchange="checkNewEvent()">
+                <% if(freshEvent != null) { %>
+                    <option value="<%=freshEvent._id%>"><%=freshEvent.title%></option>
+                <%}%>
+                <option value="none"> -- </option>
                 <option value="newEvent">New Event</option>
                 <% for(i = 0; i < events.length; i++) {%>
                     <option value="<%=events[i]._id%>"><%=events[i].title%></option>
                 <%}%>
             </select><br>
 
-            <div id="newEventFields"></div><br>
+            
 
             <input type="submit"><br>
         </form>
+        <div id="newEventButton"></div><br>
         <script>
-            function newEventMode(value) {
-                if (value == "newEvent"){
-                    document.getElementById("newEventFields").innerHTML = `
-                        <h3>New Event</h3>
-                        <input type="text" name="eventTitle" placeholder="Title"><br>
-                        <input type="text" name="eventDescription" placeholder="Description"><br>
-                        Date: 
-                            <input type="text" name="month" id="month" size="2" placeholder="MM" value="<%=month%>">/
-                            <input type="text" name="day" id="day" size="2" placeholder="DD" value="<%=day%>">/
-                            <input type="text" name="year" id="year" size="4" placeholder="YYYY" value="<%=year%>"><br>
-                        <input type="text" name="location" placeholder="Location">
-                    `;
-                    document.getElementById("eventType").value = "newEvent"
-                }
-                else {
-                    document.getElementById("newEventFields").innerHTML = "";
-                    document.getElementById("eventType").value = "existing"
-                }
+            function checkNewEvent() {
+                if(document.getElementById("event").value == "newEvent"){
+                    document.getElementById("newEventButton").innerHTML = "<br><button onclick=\"window.location." + "replace('/newEvent')\">Create Event</button>";
+                } else (document.getElementById("newEventButton").innerHTML = "")
             }
         </script>
     </body>
