--- a/App/views/inputFile.ejs
+++ b/App/views/inputFile.ejs
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Input Form</h1>
-        <form method="POST" action="/chooseEvent" enctype="multipart/form-data">
+        <h1>Input File</h1>
+        <form method="POST" action="/inputFile" enctype="multipart/form-data">
             <input type="text" name="title" id="title" placeholder="Title"><br>
             <label for="fileType">File Type:</label>
             <select name="fileType" id="fileType">
                 <option value="image">Image</option>
+                <!--
                 <option value="text">Test</option>
                 <option value="video">Video</option>
                 <option value="pdf">PDF</option>
                 <option value="other">Other</option>
+                -->
             </select><br>
             <input type="text" name="creator" id="creator" placeholder="Author/Photographer"><br>
             <input type="text" name="description" id="description" placeholder="Description"><br>
@@ -19,8 +21,9 @@
                 <input type="text" name="day" id="day" size="2" placeholder="DD">/
                 <input type="text" name="year" id="year" size="4" placeholder="YYYY"><br>
             <br><label for="fileImport">Import file: </label>
-            <input type="file" id="fileImport" name="fileImport"><br><br>
+            <input type="file" id="fileImport" name="file"><br><br>
             <input type="submit" value="Submit">
         </form>
     </body>
+    <button onclick="window.location.replace('/')">Back to home</button>
 </html>
