--- a/App/views/index.ejs
+++ b/App/views/index.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <style>
         h1 {
             font-family: Monaco;
