Began index refactor, added searchbar

--- a/App/views/index.ejs
+++ b/App/views/index.ejs
@@ -5,12 +5,17 @@
         h1 {
             font-family: Monaco;
         }
-    </style>
+    </style> 
     <br><br>
-    <h1>Hello!</h1>
-    
-    <button onclick="window.location.replace('/viewEvents')">View inputted events</button><br>
-    <button onclick="window.location.replace('/inputFile')">File Input form</button><br>
-    <button onclick="window.location.replace('/newEvent')">Event Input form</button>
-
+    <h1>Active Construction Zone</h1>
+    <img src="/bob.png">
+    <div style="text-align: center">
+        <label>Search: </label> <input type="text" placeholder="Search..."><br>
+    </div>
+    <br>
+    <div style="text-align: center">
+        <button onclick="window.location.replace('/viewEvents')">View inputted events!</button>
+        <button onclick="window.location.replace('/inputFile')">File Input form</button><br>
+        <button onclick="window.location.replace('/newEvent')">Event Input form</button>
+    </div>
 </html>
