Admin Login system set up, in order to make and use admin account, go to '/setTestUser' and then log in with 'test@gmail.com' and 'test12345'. Fixed saveFileInProgress bug where form would submit anyway when creating new event. Now, delete buttons appear for admins to remove events, and non-admins cannot access input forms.

--- a/App/views/index.ejs
+++ b/App/views/index.ejs
@@ -7,10 +7,13 @@
         }
     </style>
     <br><br>
-    <h1>Hello!</h1>
-    
+    <h1>Hello<%=name%>!</h1>
     <button onclick="window.location.replace('/viewEvents')">View inputted files</button><br>
-    <button onclick="window.location.replace('/inputFile')">File Input form</button><br>
-    <button onclick="window.location.replace('/newEvent')">Event Input form</button>
-
+    <% if(isAdmin) { %>
+        <button onclick="window.location.replace('/inputFile')">File Input form</button><br>
+        <button onclick="window.location.replace('/newEvent')">Event Input form</button><br><br>
+        <button onclick="window.location.replace('/logout')">Logout</button>
+    <% } else { %>
+        <button onclick="window.location.replace('/login')">Login</button>
+    <% } %>
 </html>
