--- a/App/views/navbar.ejs
+++ b/App/views/navbar.ejs
@@ -9,6 +9,7 @@
             <li><a class="active" onclick="window.location.replace('/')">Home</a></li>
             <li><a onclick="window.location.replace('/viewEvents')">Gallery</a></li>
             <li><a onclick="window.location.replace('/newEvent')">Contribute</a></li>
+            <!--TODO:make the text & action of this button dynamic with login-->
             <li><a onclick="window.location.replace('/login')">Login</a></li>
         </ul>
     </div>
