--- a/App/views/index.ejs
+++ b/App/views/index.ejs
@@ -7,44 +7,31 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-
-    <!-- Include scripts -->
-    <!-- Navbar include -->
-    <script src="js/jquery.js">
-        $(function(){
-            $("#navbar").html("<p>hello</p>")
-        });
-    </script>
     <title>The Civil Rights Archive</title>
 </head>
 <body>
-<body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <div class="navbar-brand">
-            <a class="navbar-brand" href="/">Civil Rights Archive</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <div class="navbar-brand">
+                <a class="navbar-brand" href="/">Civil Rights Archive</a>
+            </div>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/')">Home</a></li>
+                <!-- window.location.replace('/viewEvents') -->
+                <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/viewEvents')">Gallery</a></li>
+                <li class="nav-item"><a class="nav-link disabled" onclick="window.location.replace('/inputFile')">Contribute</a></li>
+                <!--TODO:make the text & action of this button dynamic with login-->
+                <% if(isAdmin) { %>
+                    <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/logout')">Logout</a></li>
+                <% } else { %>
+                    <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/login')">Login</a></li>
+                <% } %>
+            </ul>
         </div>
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/')">Home</a></li>
-            <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/viewEvents')">Gallery</a></li>
-            <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/newEvent')">Contribute</a></li>
-            <!--TODO:make the text & action of this button dynamic with login-->
-            <% if(isAdmin) { %>
-                <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/logout')">Logout</a></li>
-            <% } else { %>
-                <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/login')">Login</a></li>
-            <% } %>
-        </ul>
+    </nav>
+    <div class="jumbotron">
+        <div class="container"><h1>Hello, the world!</h1></div>
     </div>
-</nav>
-<!-- Javascript magic smoke -->
-<!-- Includes jquery, popper.js, bootstrap.js, in that order -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-</body>
-<div class="jumbotron">
-    <div class="container"><h1>Hello, the world!</h1></div>
-</div>
 
 <!-- Javascript magic smoke -->
 <!-- Includes jquery, popper.js, bootstrap.js, in that order -->
