Major stylistic updates

--- a/App/views/adminPanel.ejs
+++ b/App/views/adminPanel.ejs
@@ -31,9 +31,7 @@
         </div>
     </nav>
     <div class="container-fluid">
-        <div class="card">
-            <img src="">
-        </div>
+        <div style="text-align: center;"><img src="/bob.png"></div>
     </div>
 
 </body>
