--- a/App/views/login.ejs
+++ b/App/views/login.ejs
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <title>The Civil Rights Archive</title>
+</head>
     <style>
         td {
             padding: 5px;
         }
     </style>
     <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <div class="navbar-brand">
+                <a class="navbar-brand" href="/">Civil Rights Archive</a>
+            </div>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/')">Home</a></li>
+                <!-- window.location.replace('/viewEvents') -->
+                <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/viewEvents')">Gallery</a></li>
+                <li class="nav-item"><a class="nav-link disabled" onclick="window.location.replace('/inputFile')">Contribute</a></li>
+                <!--TODO:make the text & action of this button dynamic with login-->
+                <% if(isAdmin) { %>
+                    <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/adminPanel')">Beans</a></li>
+                    <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/logout')">Logout</a></li>
+                <% } else { %>
+                    <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/login')">Login</a></li>
+                <% } %>
+            </ul>
+        </div>
+    </nav>
         <table>
             <tr>
                 <td>
@@ -14,22 +43,25 @@
             </tr>
             <tr>
                 <td>
-                    <input type="email" id="email" placeholder="Email" required>
+                    <input class="form-control" type="email" id="email" placeholder="Email" required>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <input type="password" id="password" placeholder="Password" required>
+                    <input class="form-control" type="password" id="password" placeholder="Password" required>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <button onclick="login()" id="loginButton">Login</button>
+                    <button class="btn btn-primary" onclick="login()" id="loginButton">Login</button>
                 </td>
             </tr>
         </table>
         <p id="message"></p><br>
-        <button onclick="window.location.replace('/')">Home</button>
+        <!-- Javascript magic smoke -->
+        <!-- Includes jquery, popper.js, bootstrap.js, in that order -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     </body>
 </html>
 <script>
