--- a/App/views/testViewEvents.ejs
+++ b/App/views/testViewEvents.ejs
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
-<html>
-    <h1>Events:</h1>
-    <p><%= message %></p>
-    <% for(i=0; i < events.length; i++) {%>
-        <a href="/viewEvent/<%=events[i].strId%>"><%=events[i].title%></a><% if(admin) { %>
-            &nbsp;&nbsp;<button onclick="window.location.replace('/deleteEvent/<%=events[i].strId%>')">Delete</button>
-        <% } %>
-        <br><br>
-    <% } %>
-    <button onclick="window.location.replace('/')">Home</button>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <title>The Civil Rights Archive</title>
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <div class="navbar-brand">
+                <a class="navbar-brand" href="/">Civil Rights Archive</a>
+            </div>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/')">Home</a></li>
+                <!-- window.location.replace('/viewEvents') -->
+                <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/viewEvents')">Gallery</a></li>
+                <li class="nav-item"><a class="nav-link disabled" onclick="window.location.replace('/inputFile')">Contribute</a></li>
+                <!--TODO:make the text & action of this button dynamic with login-->
+                <% if(isAdmin) { %>
+                    <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/adminPanel')">Beans</a></li>
+                    <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/logout')">Logout</a></li>
+                <% } else { %>
+                    <li class="nav-item"><a class="nav-link" onclick="window.location.replace('/login')">Login</a></li>
+                <% } %>
+            </ul>
+        </div>
+    </nav>
+    <div class="container-fluid pl-2 pr-2">
+        <h1>Event Gallery</h1>
+        <p><%= message %></p>
+        <div class="container-fluid">
+            <% for(var i=0; i < events.length; i++) {%>
+                <div class="container-fluid pb-2 pt-2">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title"><%=events[i].title%></h5>
+                            <p class="card-subtitle text-muted"><%=events[i].location%></p>
+                            <img src=<%/*TODO*/%> class="card-img-top" alt="">
+                            <p><%=events[i].description%></p>
+                            <a href="/viewEvent/<%=events[i].strId%>" class="btn btn-primary btn-sm">See more</a>
+                            <% if(admin) { %>
+                            <a class="btn btn-outline-danger btn-sm" onclick="window.location.replace('/deleteEvent/<%=events[i].strId%>')">Delete</a>
+                            <% } %>
+                        </div>
+                    </div>
+                </div>
+            <% } %>
+        </div>
+    </div>
+
+    <!-- Javascript magic smoke -->
+    <!-- Includes jquery, popper.js, bootstrap.js, in that order -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+</body>
 </html> 
